2000-01-04  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwv.c: Dave Cleaned and Improved things.
	* ntpd/ntp_loopfilter.c (local_clock): Dave fixed something.

	* ntpd/refclock_wwv.c: Rename max to p_max or s_max as appropriate
	to avoid native SunOS compiler collision.
	(wwv_epoch): Make declaration == definition
	(wwv_rsec): Ditto
	(wwv_newchan): Ditto
	(wwv_qsy): Ditto
	(timecode): Ditto

	* ntpd/refclock_oncore.c (oncore_init_shmem): Use a cast to widen
	mmap's NIL offset.

	* ntpd/refclock_chu.c (chu_rf): Make declaration == definition.
	Rename min/max to es_min/es_max to avoid native SunOS compiler
	collision.
	(chu_uart): Make declaration == definition.

	* libntp/icom.c (sndpkt): Make declaration and definition equivalent.
	(doublefreq): Ditto.

	* ntpd/refclock_oncore.c (MAP_FAILED): Some systems do not #define
	this.

	* ntpd/refclock_wwv.c: 
	* ntpd/refclock_chu.c: 
	* libntp/icom.c: 
	* libntp/Makefile.am: 
	* include/icom.h: 
	* html/driver7.htm: 
	* html/driver36.htm: 
	Support for ICOM.  The WWV/H driver, by the way, is getting truly
	awesome.  The CHU autotune function works okay as it is.  I'd like
	to find somebody else to test the audio drivers just to make sure
	I haven't done something stupid.  There is a new define ICOM
	intended for the driver autotune function; however, I crafted the
	thing in much the same way as the refclock_atom.c thing - it tries
	to open /dev/icom and, if that fails, goes quietly to sleep.
	From: Dave Mills <mills@udel.edu>

2000-01-03  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_oncore.c (oncore_read_config): Patches and cleanup
	From: Poul-Henning Kamp <phk@critter.freebsd.dk>
	more isascii() stuff from HMS.

	* ntpd/refclock_fg.c (fg_receive): Cast.
	From: Tom Smith <smith@cag.lkg.dec.com>

	* ntpd/map_vme.c (map_vme): tx.access_result indicates failure on
	< 0, not <= 0.  A fix that apparently did not get brought over
	from the ntp3 base.
	From: Michael Barone <michael.barone@lmco.com>
